# OpenNFT

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  Dockerfile  Makefile  manage.py  pyproject.toml  pytest.ini
backend/dev/: docker-tag
backend/etc/: asgi.py  entrypoint.sh  uwsgi.ini  wsgi.py
backend/helm/: .sops.yaml  Chart.yaml  secrets.yaml  values.yaml
backend/helm/templates/: backend.yaml  ingress.yaml  rabbit-service.yaml  rabbit.yaml
backend/nft_market/: celery.py  celeryconfig.py  settings.py  settings_dev.py  settings_test.py  urls.py  wsgi.py
backend/nft_market/api/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/nft_market/api/migrations/: 0001_initial.py  0002_use_big_integers.py
backend/nft_market/contracts/: __init__.py  assets  contracts.py
backend/nft_market/contracts/assets/: clear.py  escrow.py  manager.py  proxy.py
backend/nft_market/contracts/assets/helpers/: parse.py  state.py
backend/nft_market/services/: algorand.py
backend/nft_market/utils/: authorization.py  constants.py  deployment.py  operations.py  transactions.py
backend/tests/: test_compile.py
contracts/: .eslintrc  algob.config.js  assets  package-lock.json  package.json  pyproject.toml
contracts/assets/: escrow.py
contracts/common/: constants.js
contracts/scripts/: deploy.js
contracts/test/: contract.mjs
contracts/test/utils/: assets.mjs  contract.mjs  errors.mjs
frontend/: README.md  package.json  postcss.config.js  tailwind.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
(+81 files in other folders)
