[tool.poetry]
name = "nft-market"
version = "0.1.0"
description = ""
authors = ["sebastiangula <sebastian.gula@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyteal = {git = "https://github.com/algorand/pyteal.git", rev = "77b2e4452e443d449474d4dee1776fab3eb66f66"}
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
